# 4bot

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  4BOT_SYSTEM_DOCUMENTATION.md  4bot_orchestrator.py  CLAUDE.md  EVENT_MONITORING.md  Makefile  RABBITMQ_SETUP.md  ai_posts_intercepted.json  auto_responder.out  browser_cookie_test.py  capture_fresh_auth.py  cleanup_orphans.sh  com.4botbsc.cz-daemon.plist  com.4botbsc.vterm-http.plist  cz_auto_daemon.py  cz_autonomous_system.py  cz_available_tweets_reply.py  cz_batch_reply.py  cz_force_reply.py  cz_headless_batch.py  cz_mass_reply.py  cz_notification_daemon.py  cz_notification_monitor.py  cz_posts.out  cz_reply_manager.py  cz_reply_poster.py  cz_reply_to_tweets.py  cz_success_range_reply.py  cz_targeted_replies.py  cz_tweet_poster.py  cz_unified_reply_system.py  cz_vterm_rabbitmq_daemon.py  cz_vterm_request_proxy.py  debug_cookies.py  diagnose_monitor.py  diagnose_tweet_access.py  dual_monitor.py  (+56 more)
.github/: CODEOWNERS  dependabot.yml
Docs/: 4Bot Tweets.md  DEVELOPER_PTYTERM.md  GitHub X Automation Browser Wrappers.md  TEST_COVERAGE_REPORT.md  available_tweets.md
auth_data/: x_cookies.json  x_cookies_netscape.txt  x_tokens.env  x_tokens.json  x_tokens.txt
chrome_profiles/: profile_mapper.py  profile_mapping.json
config/: active_profile
dual_monitor_logs/: dual_monitor_report_20251016_190130.json
logs/: cz_batch_log.json
notification_json_logs/: notifications_20251016_191140.json  notifications_20251016_191806.json  notifications_20251016_191806.txt
notification_logs/: notification_report_20251016_185934.json
playbooks/: cz_batch_2025-10-16.json  sample.json
prompts/: persona_cz.system.md
schedules/: sample.json
tests/: base_test_fixture.py  mock_factories.py  test_active_profile.py  test_cli_profiles.py  test_collect_only.py  test_cookie_manager.py  test_daily_index_cli.py  test_deps_cli.py  test_deps_remote_cli.py  test_deps_set_urls_cli.py  test_health_imports.py  test_health_strict.py  test_launchd_renderer_smoke.py  test_no_abs_user_paths_py.py  test_no_hardcoded_storage_paths_py.py  test_no_vterm_vendor.py  test_notification_parser.py  test_paths_cli.py  test_paths_cli_json.py  test_paths_diff_cli.py  test_paths_doctor_cli.py  test_paths_doctor_cli_json.py  (+61 more)
(+262 files in other folders)
